--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>UxClub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" href="asset/images/logo/Logo.png" class="">
     <link rel="stylesheet" href="asset/css/bootstrap.css">
     <link rel="stylesheet" href="asset/css/fontawesome-all.css">
     <link rel="stylesheet" href="asset/css/style.css">
@@ -100,6 +102,8 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-gray"></section>
 
     <section class="bg-course">
         <div class="container">
@@ -230,6 +234,10 @@
                     <div class="members-title">
                         <h2>Get Membership For Unlimited access <span class="text-redish">7,900 <sup>Tk.</sup></span></h2>
                         <div>
+                            <div class="col-form-label">
+                                Call Now! <i class="fa fa-phone text-redish"></i> <span class="text-redish">01744 245 726</span>
+                            </div>
+                            <br/>
                             <button type="button" class="btn btn-membership">Membership <i class="fa fa-angle-right text-light"></i></button>
                         </div>
                     </div>
@@ -237,8 +245,147 @@
             </div>
         </div>
     </section>
+
+    <section class="bg-emergency">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="members-title">
+                        <h2>Emergency articale for you</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="carousel slide" data-ride="carousel" id="postsCarousel">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12 text-md-right lead">
+                        <a class="btn btn-secondary-outline prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
+                        <a class="btn btn-secondary-outline next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="container p-t-0 m-t-2 carousel-inner">
+                <div class="row row-equal carousel-item active m-t-0">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale1.png" alt="Carousel 1">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>UI/UX Design কি?</h3>
+                                <p>
+                                    UI এর মানে হচ্ছে (User Interface ) “ইউজার ইন্টারফেস” বলতে যা বুঝবো... যেসব ডিভাইসে  স্ক্রীন আছে যেমন কম্পিউটার, মোবাইল, ট্যাব ইত্যাদি... সেই স্ক্রীনে যা দেখা যায় মূলত তাকেই বলে “ইউজার ইন্টারফেস”
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale2.png" alt="Carousel 2">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>About UX Design</h3>
+                                <!--<p>-->
+                                    <!--UI এর মানে হচ্ছে (User Interface ) “ইউজার ইন্টারফেস” বলতে যা বুঝবো... যেসব ডিভাইসে  স্ক্রীন আছে যেমন কম্পিউটার, মোবাইল, ট্যাব ইত্যাদি... সেই স্ক্রীনে যা দেখা যায় মূলত তাকেই বলে “ইউজার ইন্টারফেস”-->
+                                <!--</p>-->
+                                <p>
+                                    “UX এর মানে হল User Experience” একটি Software, Application, Mobile App বা Game তৈরি করার আগেই সম্পূর্ণ ডিজাইন করা হয়, পরবর্তীতে সেই ডিজাইন অনুযায়ী ডেভলপ করা হয়।
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale3.png" alt="Carousel 2">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>UI/UX ডিজাইনারের সম্ভবনা..</h3>
+                                <p>
+                                    আমাদের ভাবনাগুলো সাধারণত একটি জব বা কোন ব্যাবসার পরিকল্পনাতেই হারিয়ে যায় তাই আমরা এমন কাজের পিছু ছুটি যা আমাদের আয়ের উৎস হবে।  আমরা অনেকেই চূড়ান্ত অবস্থাটা বুঝিনা বলে মাঝ পথেই হাল  ছেড়ে দেই...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row row-equal carousel-item m-t-0">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale3.png" alt="Carousel 2">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>UI/UX ডিজাইনারের সম্ভবনা..</h3>
+                                <p>
+                                    আমাদের ভাবনাগুলো সাধারণত একটি জব বা কোন ব্যাবসার পরিকল্পনাতেই হারিয়ে যায় তাই আমরা এমন কাজের পিছু ছুটি যা আমাদের আয়ের উৎস হবে।  আমরা অনেকেই চূড়ান্ত অবস্থাটা বুঝিনা বলে মাঝ পথেই হাল  ছেড়ে দেই...
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale2.png" alt="Carousel 6">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>About UX Design</h3>
+                                <!--<p>-->
+                                <!--UI এর মানে হচ্ছে (User Interface ) “ইউজার ইন্টারফেস” বলতে যা বুঝবো... যেসব ডিভাইসে  স্ক্রীন আছে যেমন কম্পিউটার, মোবাইল, ট্যাব ইত্যাদি... সেই স্ক্রীনে যা দেখা যায় মূলত তাকেই বলে “ইউজার ইন্টারফেস”-->
+                                <!--</p>-->
+                                <p>
+                                    “UX এর মানে হল User Experience” একটি Software, Application, Mobile App বা Game তৈরি করার আগেই সম্পূর্ণ ডিজাইন করা হয়, পরবর্তীতে সেই ডিজাইন অনুযায়ী ডেভলপ করা হয়।
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-img-top card-img-top-250">
+                                <img class="img-fluid" src="asset/images/articale/articale1.png" alt="Carousel 6">
+                            </div>
+                            <div class="card-block p-t-2 emergency-content">
+                                <h3>UI/UX Design কি?</h3>
+                                <p>
+                                    UI এর মানে হচ্ছে (User Interface ) “ইউজার ইন্টারফেস” বলতে যা বুঝবো... যেসব ডিভাইসে  স্ক্রীন আছে যেমন কম্পিউটার, মোবাইল, ট্যাব ইত্যাদি... সেই স্ক্রীনে যা দেখা যায় মূলত তাকেই বলে “ইউজার ইন্টারফেস”
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-redish">
+
+    </section>
+
+    <section class="bg-support">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 col-12 support-box">
+                    <img src="asset/images/icon/survey.png">
+                    <span> Write Your Suggestion</span>
+                </div>
+
+                <div class="col-md-4 col-sm-12 col-12 support-box support-box-m">
+                    <img src="asset/images/icon/group.png">
+                    <span> Join Our Community <i class="fa fa-angle-right"></i></span>
+                </div>
+
+                <div class="col-md-4 col-sm-12 col-12 support-box">
+                    <img src="asset/images/icon/facebook-like-hand-symbol-outline.png">
+                    <span> Find Us On Facebook</span>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <script src="asset/js/jquery-3.3.1.js"></script>
 <script src="asset/js/bootstrap.js"></script>
+<script src="asset/js/script.js"></script>
 </body>
 </html>
